2008-03-10  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* MonoDevelop.Ide.StandardHeader/StandardHeaderPanel.cs: Workaround for bug
	  in Mono 1.2.4 where usings are ignored in anonymous methods.

2008-03-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Templates/CombineDescriptor.cs,
	  MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/CombineEntryDescriptor.cs,
	  MonoDevelop.Ide.Templates/ProjectDescriptor.cs,
	  MonoDevelop.Ide.Commands/ViewCommands.cs,
	  MonoDevelop.Ide.Commands/FileCommands.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/CombineNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/UnknownEntryNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs,
	  MonoDevelop.Ide.StandardHeader/StandardHeaderPanel.cs,
	  MonoDevelop.Ide.Gui.Pads/FileList.cs,
	  MonoDevelop.Ide.Gui/Document.cs,
	  MonoDevelop.Ide.Gui/ProjectOperations.cs,
	  MonoDevelop.Ide.Gui.Search/SearchReplaceInFilesManager.cs: Use the
	  new MessageService.Confirm method instead of AskQuestion where
	  possible.

2008-03-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.mdp: Updated.

2008-03-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Commands/ViewCommands.cs,
	  MonoDevelop.Ide.Commands/FileCommands.cs,
	  MonoDevelop.Ide.Commands/ProjectCommands.cs,
	  MonoDevelop.Ide.Commands/WindowCommands.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs: Set
	  better descriptions for dynamically generated menu items.
	* MonoDevelop.Ide.addin.xml: Updated command descriptions.
	* MonoDevelop.Ide.Gui/Ide.cs: Show menu item descriptions in the status
	  bar.

2008-03-07  Michael Hutchinson  <mhutchinson@novell.com> 

	* MonoDevelop.Ide.addin.xml: